--- a/PLZengine/.classpath
+++ b/PLZengine/.classpath
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/tablelayout-libgdx"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/gdx"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/gdx-backend-android"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/gdx-backend-jogl"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/tablelayout"/>
-	<classpathentry kind="lib" path="/twiPLZ/libs/gdx-backend-jogl-natives.jar"/>
-	<classpathentry kind="lib" path="/twiPLZ/libs/gdx-backend-jogl.jar"/>
-	<classpathentry kind="lib" path="/twiPLZ/libs/gdx-natives.jar"/>
-	<classpathentry kind="lib" path="/twiPLZ/libs/gdx-sources.jar"/>
-	<classpathentry kind="lib" path="/twiPLZ/libs/gdx.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/tablelayout-libgdx"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
