--- a/twiPLZ/.classpath
+++ b/twiPLZ/.classpath
@@ -2,14 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/tablelayout-libgdx"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/PLZengine"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/gdx"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/gdx-backend-jogl"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/tablelayout"/>
-	<classpathentry kind="lib" path="libs/gdx-backend-jogl-natives.jar"/>
-	<classpathentry kind="lib" path="libs/gdx-backend-jogl.jar" sourcepath="D:/GDD/Log/Geff/ExternalLibs/libgdx/backends/gdx-backend-jogl"/>
-	<classpathentry kind="lib" path="libs/gdx-natives.jar"/>
-	<classpathentry kind="lib" path="libs/gdx-sources.jar"/>
-	<classpathentry kind="lib" path="libs/gdx.jar" sourcepath="D:/GDD/Log/Geff/twiPLZ/libs/gdx-sources.jar"/>
-	<classpathentry kind="lib" path="libs/gdx-backend-lwjgl.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/tablelayout-libgdx"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
