--- a/twiPLZAndroid/AndroidManifest.xml
+++ b/twiPLZAndroid/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       android:versionCode="1"
       android:versionName="1.0" package="twiplz.android">
-    <uses-sdk android:targetSdkVersion="5" android:minSdkVersion="3"></uses-sdk>
+    <uses-sdk android:minSdkVersion="6" android:targetSdkVersion="8"></uses-sdk>
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
         <activity android:name="twiplz.android.GameStarterAndroid"
                   android:label="@string/app_name"
