--- a/PLZ/.project
+++ b/PLZ/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>twiPLZ</name>
+	<name>PLZ</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -18,7 +18,7 @@
 		<link>
 			<name>src/data</name>
 			<type>2</type>
-			<locationURI>PARENT-1-PROJECT_LOC/twiPLZAndroid/assets/data</locationURI>
+			<locationURI>PARENT-1-PROJECT_LOC/PLZAndroid/assets/data</locationURI>
 		</link>
 	</linkedResources>
 </projectDescription>
