--- a/PLZAndroid/.classpath
+++ b/PLZAndroid/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry excluding="**/.svn/*" kind="src" path="src"/>
 	<classpathentry excluding="**/.svn/*" kind="src" path="gen"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/PLZengine"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/twiPLZ"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/PLZ"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/gdx-backend-android"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/gdx"/>
