--- a/PLZAndroid/.project
+++ b/PLZAndroid/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>twiPLZ-android</name>
+	<name>PLZ-android</name>
 	<comment></comment>
 	<projects>
 	</projects>
