--- a/PLZAndroid/AndroidManifest.xml
+++ b/PLZAndroid/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       android:versionCode="1"
-      android:versionName="1.0" package="twiplz.android">
+      android:versionName="1.0" package="plz.android">
     <uses-sdk android:minSdkVersion="6" android:targetSdkVersion="8"></uses-sdk>
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
-        <activity android:name="twiplz.android.GameStarterAndroid"
+        <activity android:name="plz.android.GameStarterAndroid"
                   android:label="@string/app_name"
                   android:configChanges="keyboard|keyboardHidden|orientation">
             <intent-filter>
