--- a/SunTzu/SunTzu/Assembly-CSharp-firstpass-vs.csproj
+++ b/SunTzu/SunTzu/Assembly-CSharp-firstpass-vs.csproj
@@ -48,7 +48,9 @@
      <Compile Include="Assets\Standard Assets\Code\Game\Continent\Continent.cs" />
      <Compile Include="Assets\Standard Assets\Code\Game\Continent\ContinentCard.cs" />
      <Compile Include="Assets\Standard Assets\Code\Game\Game.cs" />
+     <Compile Include="Assets\Standard Assets\Code\Game\Player.cs" />
      <Compile Include="Assets\Standard Assets\Code\MainMenu\MenuOnePlayer.cs" />
+     <Compile Include="Assets\Standard Assets\Code\Utils\DrawCollider.cs" />
      <Compile Include="Assets\Standard Assets\_Scripts\General Scripts\ActivateTrigger.cs" />
      <Compile Include="Assets\Standard Assets\_Scripts\Utility Scripts\CombineChildren.cs" />
      <Compile Include="Assets\Standard Assets\_Scripts\Utility Scripts\MeshCombineUtility.cs" />
