--- a/Paper/Paper/Paper.csproj
+++ b/Paper/Paper/Paper.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common.cs" />
     <Compile Include="Cuboid.cs" />
     <Compile Include="Fold.cs" />
     <Compile Include="Form1.cs">
