--- a/Paper/Unity/Assembly-CSharp-vs.csproj
+++ b/Paper/Unity/Assembly-CSharp-vs.csproj
@@ -45,6 +45,11 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Code\CameraChanger.cs" />
+     <Compile Include="Assets\Code\Cuboid.cs" />
+     <Compile Include="Assets\Code\DrawCollider.cs" />
+     <Compile Include="Assets\Code\Game.cs" />
+     <Compile Include="Assets\Code\OnTouchMouse.cs" />
+     <Compile Include="Assets\Code\PaperUp.cs" />
      <Compile Include="Assets\Code\PerspectiveSwitcher.cs" />
      <None Include="Assets\Standard Assets\Projectors\Guidelines.txt" />
      <None Include="Assets\Standard Assets (Mobile)\Shaders\Particle Shaders\Mobile Multiply Culled.shader" />
