--- a/Paper/Paper/Paper.csproj
+++ b/Paper/Paper/Paper.csproj
@@ -47,7 +47,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common.cs" />
-    <Compile Include="Cuboid.cs" />
+    <Compile Include="Model\ComponentBase.cs" />
+    <Compile Include="Model\IResizableHeight.cs" />
+    <Compile Include="Model\Folding.cs" />
     <Compile Include="Fold.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -55,6 +57,13 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\IDepth.cs" />
+    <Compile Include="Model\IResizableWidth.cs" />
+    <Compile Include="Model\Link.cs" />
+    <Compile Include="Model\Platform.cs" />
+    <Compile Include="Model\Sensor.cs" />
+    <Compile Include="Model\ZoneCutting.cs" />
+    <Compile Include="Model\ZoneMoving.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rec.cs" />
