--- a/Paper/Paper/Paper.csproj
+++ b/Paper/Paper/Paper.csproj
@@ -48,6 +48,9 @@
   <ItemGroup>
     <Compile Include="Common.cs" />
     <Compile Include="Model\ComponentBase.cs" />
+    <Compile Include="Model\IResizable.cs" />
+    <Compile Include="Model\ZoneFoldingH.cs" />
+    <Compile Include="Model\ZoneMovingV.cs" />
     <Compile Include="Model\IResizableHeight.cs" />
     <Compile Include="Model\Folding.cs" />
     <Compile Include="Fold.cs" />
@@ -62,8 +65,8 @@
     <Compile Include="Model\Link.cs" />
     <Compile Include="Model\Platform.cs" />
     <Compile Include="Model\Sensor.cs" />
-    <Compile Include="Model\ZoneCutting.cs" />
-    <Compile Include="Model\ZoneMoving.cs" />
+    <Compile Include="Model\ZoneFoldingV.cs" />
+    <Compile Include="Model\ZoneMovingH.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rec.cs" />
@@ -124,6 +127,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Data\Icon\Icon_SensorRemoteControl.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Data\Grid.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
