--- a/Paper/Paper/Paper.csproj
+++ b/Paper/Paper/Paper.csproj
@@ -131,6 +131,10 @@
   <ItemGroup>
     <None Include="Data\Grid.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Data\GridH.png" />
+    <Content Include="Data\GridV.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
